--- a/components/loading-button.module.css
+++ b/components/loading-button.module.css
@@ -1,12 +1,13 @@
 .button {
-  padding: 10px;
-  height: 8vmin;
-  min-height: min-content;
-  max-width: 80vw;
-  width: 24vmin;
+  padding: 5px;
+  height: fit-content;
   font-size: 24px;
   position: relative;
   line-height: 0;
+  border-radius: 10px;
+  border-color: white;
+  border-style: solid;
+  background-color: var(--background-alt);
 }
 
 .loadingIcon {
@@ -18,6 +19,14 @@
   left: 50%;
   background-color: transparent;
   animation: spin 1.5s infinite linear;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.loadingIcon .hidden {
+  visibility: hidden;
 }
 
 @keyframes spin {
